--- a/Meu Site/fdf.html
+++ b/Meu Site/fdf.html
@@ -33,6 +33,9 @@
 
             <section id="aboutme">
                 <h1>Sobre Mim</h1>
+                
+                <img src="arquivos_site/felipe.jpg" alt="lipe">
+
                 <div class="Basquete">
                     <h2>Basquete</h2>
                     <img src="arquivos_site/habilidades/—Pngtree—vector basketball icon_4187184.png" alt="bskt">
